# gol_MPI

./: CMakeLists.txt  LifeGame_1000x1000_iter10.txt  LifeGame_100x100_iter10.txt  LifeGame_10x10_iter10.txt  conway  game.h  install.sh  iterations.txt  logic.c  logic.h  main.c  mpi_logic.h  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt  render.c  render.h
Ejemplos_LifeGame/1000x1000/: LifeGame_1000x1000_iter0.txt  LifeGame_1000x1000_iter10.txt  LifeGame_1000x1000_iter100.txt  LifeGame_1000x1000_iter1000.txt
Ejemplos_LifeGame/100x100/: LifeGame_100x100_iter0.txt  LifeGame_100x100_iter10.txt  LifeGame_100x100_iter100.txt  LifeGame_100x100_iter1000.txt
Ejemplos_LifeGame/10x10/: LifeGame_10x10_iter0.txt  LifeGame_10x10_iter10.txt
